--- a/index.html/index.html
+++ b/index.html/index.html
@@ -166,8 +166,8 @@
       const doc = new jsPDF({ orientation: "landscape" });
 
       // Marco y fondo
-        doc.addImage(logoBase64, "PNG", 245, 12, 40, 25)
-      doc.setDrawColor(39, 174, 96);
+      doc.addImage(logoBase64, "PNG", 245, 12, 40, 25)
+      doc.setDrawColor(39, 174, 96);10,10;
       doc.setLineWidth(2);
       doc.rect(10, 10, 277, 190);
       doc.setFillColor(39, 174, 96);
