--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,7 +14,7 @@
     }
     h1, h2, h3 {
       text-align: center;
-      color: #ffffff;
+      color: #01796F;
     }
     form {
       display: flex;
