--- a/index.html/index.html
+++ b/index.html/index.html
@@ -53,7 +53,7 @@
     .pregunta-block {
       margin-top: 15px;
       padding: 10px;
-      background-color: #ffffff;
+      background-color: #000000;
       border-radius: 6px;
     }
     #logo {
